--- a/src/scss/components/_Navigation.scss
+++ b/src/scss/components/_Navigation.scss
@@ -3,7 +3,7 @@
     display: none;
     flex-direction: column;
     padding: 20px;
-    top: 100px;
+    top: 20px;
     left: calc(15% / 2);
     width: 85%;
     border-radius: 10px;
@@ -29,7 +29,7 @@
     }
 
     &__element {
-        padding: 4px 0;
+        padding: 2px 0;
     }
 
     &__link {
@@ -38,7 +38,7 @@
         font-weight: bold;
         text-decoration: none;
         color: #fff;
-        transition: .2s;
+        transition: 0.2s;
 
         &:hover {
             color: #000;
@@ -46,7 +46,7 @@
     }
 
     &__btns-wrap {
-        padding: 20px 0;
+        padding: 10px 0;
         display: flex;
         flex-direction: column;
     }
@@ -64,7 +64,7 @@
         border-radius: 50px;
         border-style: none;
         cursor: pointer;
-        transition: .2s;
+        transition: 0.2s;
 
         &:hover {
             color: #000;
@@ -81,8 +81,6 @@
         &:last-child {
             margin-bottom: 0;
         }
-
-
     }
 
     @media screen and (min-width: 1440px) {
@@ -119,7 +117,6 @@
             }
         }
     }
-
 }
 
 .nav.active {
