--- a/src/scss/components/_Option.scss
+++ b/src/scss/components/_Option.scss
@@ -28,7 +28,7 @@
 
     &__text {
         text-align: center;
-        font-size: .8rem;
+        font-size: 0.8rem;
         color: $color-nautral-grayish-violet;
     }
 
