--- a/src/scss/config/_base.scss
+++ b/src/scss/config/_base.scss
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-    margin-top: 60px;
+    // margin-top: 60px;
     @media screen and (min-width: 1440px) {
         margin-top: 0;
         overflow-x: hidden;
